--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
-.App {
-  text-align: center;
-}
 
+
+.center{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-self: center;
+}
+.item{
+  display: flex;
+  align-items: center;
+  justify-self: center;
+}
 
